syntax = "proto3";

package pesto.models;
import "google/protobuf/timestamp.proto";

message User {
  int32 uid = 1;
  string phone_no = 2;
  string picture_url = 3;
  int32 balance = 4;
  string username = 5;
}

message Profile {
  int32 uid = 1;
  string username = 2;
}

message Claim {
  int32 uid = 1;
  int32 amount = 2;
  User owner = 3;
  User receiver = 4;
}

message Room {
  int32 uid = 1;
  User owner = 2;
  string name = 3;
  repeated RoomItem item = 4;
  repeated User invited = 5;
}

message RoomItem {
  int32 uid = 1;
  string name = 2;
  int32 value = 3;
  User locked_by = 4;
}

message Contact {
  int32 uid = 1;
  string username = 2;
  bool trusted = 3;
}

message Transaction {
  Profile profile = 1;
  int32 amount = 2;
  enum Type {
    FROM = 0;
    TO = 1;
  }
  Type transaction_type = 3;
  google.protobuf.Timestamp timestamp = 4;
}
